--- a/051-DonkeyCar.Rmd
+++ b/051-DonkeyCar.Rmd
@@ -1,4 +1,4 @@
-# Change to donkeycar {#donkeyCar}
+# Building a donkeycar {#donkeyCar}
 
 In December 2018 I switched from sunfounder to donkeycar 
 [Donkey Car](http://www.donkeycar.com "Donkey Car's Homepage")
@@ -8,13 +8,13 @@ The sunfounder was wonderful to learn the basics, PWM, I2C, use of camera with P
 
 Second reason, other members of the group [Esslinger Makerspace Projekt: Autonomen RoboCar bauen](https://www.meetup.com/Esslingen-Makerspace/ "Homepage of the meetup")  opted for donkey car.
 
-### Selecting a RC car
+### Selecting a RC car {#carSelection}
 
 Selection criteria for RC car are:
 
 - Brushed motor => no need for high speed
 - NiMH battery => less sensitive to mechanical impact compared to Li-ion battery
-- ESC not integrated into remote controll receiver
+- ESC not integrated into remote control receiver
 - 3 wire steering servo
 
 A great buying guide for RC-cars from the donkeycar project can be found at  http://docs.donkeycar.com/roll_your_own/
@@ -47,7 +47,7 @@ include_graphics("images/Donkey3DPrint.jpg")
 
 -  Select web or physical controller [Controller Parts](http://docs.donkeycar.com/parts/controllers/#physical-joystick-controller)
 
-## Rewiring the car
+## Rewiring the car {#carWiring}
 
 The rewiring consists of
 
@@ -82,7 +82,7 @@ include_graphics("images/ServoHat.jpg", dpi = NA)
 
 
 
-You can elimnate the RC receiver altogether, see figure \@ref(fig:rewireSimple) 
+You can eliminate the RC receiver altogether, see figure \@ref(fig:rewireSimple) 
 
 ```{r rewireSimple, fig.cap= "Rewiring without RC receiver", echo=FALSE, message=FALSE, warning=FALSE, eval=TRUE, dpi= 800}
 library(knitr)
@@ -283,7 +283,7 @@ You can now control your car from a web browser at the URL: ```192.168.178.67:88
 
 ## Connecting bluetooth controller
 
-I got an WiiU second hand [WiiU controller](https://www.amazon.de/gp/product/B06XSB2TXQ/ref=oh_aui_detailpage_o01_s00?ie=UTF8&psc=1), therefore I did select the [Controllers page](http://docs.donkeycar.com/parts/controllers/) the [WiiU controller](https://github.com/autorope/donkeypart_bluetooth_game_controller)
+I got an Wii U second hand [WiiU controller](https://www.amazon.de/gp/product/B06XSB2TXQ/ref=oh_aui_detailpage_o01_s00?ie=UTF8&psc=1), therefore I did select the [Controllers page](http://docs.donkeycar.com/parts/controllers/) the [WiiU controller](https://github.com/autorope/donkeypart_bluetooth_game_controller)
 
 After ssh into the raspberry install **Bluetooth Game Controller** library
 
@@ -331,7 +331,7 @@ button: LEFT_STICK_X, value:-0.00390625
 button: LEFT_STICK_X, value:-0.00546875
 button: LEFT_STICK_X, value:-0.00703125
 ``` 
-How to adde the Bluetooth controller into `manage.py`is described in section \@ref(AddBluetooth)
+How to add the Bluetooth controller into `manage.py`is described in section \@ref(AddBluetooth)
 
 In the file ```manageOrgExtWii.py``` the Bluetooth controller was integrated.
 
@@ -481,61 +481,27 @@ More on ```rm``` can be found at https://www.computerhope.com/unix/urm.htm
 
 ### Copy files from raspi to mac
 
-[copy file from pi to mac](https://www.raspberrypi.org/documentation/remote-access/ssh/scp.md) run in terminal
+Open terminal on Mac
+[Docy of scp command to copy file from pi to mac](https://www.raspberrypi.org/documentation/remote-access/ssh/scp.md) run in terminal
 
 ```
 scp pi@192.168.178.67:mycar/manage.py
-# or
-rsync -r pi@192.168.178.67:~/mycar/tub/  ~/mycar/tub/
 ```
-then type the password of the pi, afterwards the the file ```mycar/manage.py``` is being copied to the current location. The current location can be found via the ```pwd```command.
+then type the password of the pi, afterwards the the file ```mycar/manage.py``` is being copied to the current location.  The current location can be found via the ```pwd```command.
 
-```
-10-42-27-27:CloudProjectsUnderWork uwesterr$ pwd
-/Users/uwesterr/CloudProjectsUnderWork 
-```
-
-### Copy files to USB drive
-TBD, not managed to get this to work
-Der Befehl
-```usb-devices```
-zeigt eine ausführliche Übersicht der USB Geräte und Busse an. Diese Liste ist kompakter als die Liste die durch den Befehl lsusb -v erzeugt wird.
-
-
-according to http://www.netzmafia.de/skripten/hardware/RasPi/RasPi_Laufwerke.html
-
-Im Gegensatz zum Windows-Gefrickel mit Laufwerksbuchstaben, wird bei Linux eine Platte bzw. Plattenpartition ("Dateisystem" genannt) in ein beliebiges Unterverzeichnis eingehängt ("mounted"). Also legen Sie zuerst einen Ordner für die Platte oder den USB-Stick an ("Mountpoint" genannt). Per Konvention geschiet die meist im Verzeichnis /media - was in den folgenden Beispielen auch so gehandhabt wird. Zum Beispiel nenne ich den Ordner usbdisk. Der Name kann frei gewählt werden, sollte aber keine Sonder- oder Leerzeichen enthalten:
+Or run `rsync`in terminal on Mac
 
 ```
-sudo mkdir /media/usbdisk
+rsync -r pi@192.168.178.67:~/mycar/tub/  ~/mycar/tubMac/
 ```
+You will be prompted for the raspi password.
+All files from the raspi folder `~/mycar/tub/` will be copied to the folder `~/mycar/tubMac/`on the Mac
 
-Bevor Sie den Stick oder die Platte anschließen, schalten Sie die Ausgabe des Systemlogs mit dem folgenden Kommando ein ("-f" sorgt dafür, dass alle weiteren Meldungen ausgegeben werden, ohne tail zu beenden):
 
-```
-(env) pi@donkeypi_uwe:/media $ tail -f /var/log/messages
-
-```
-Wenn Sie nun den USB-Stick oder die Platte anschließen, werden entsprechende Log-Einträge angezeigt, zum Beispiel:
-
-```
-tail: cannot open '–f' for reading: No such file or directory
-==> /var/log/messages <==
-Mar 22 17:20:46 donkeypi_uwe kernel: [  278.505355] usb-storage 1-1.3:1.0: USB Mass Storage device detected
-Mar 22 17:20:46 donkeypi_uwe kernel: [  278.505724] scsi host0: usb-storage 1-1.3:1.0
-Mar 22 17:20:46 donkeypi_uwe mtp-probe: checking bus 1, device 5: "/sys/devices/platform/soc/3f980000.usb/usb1/1-1/1-1.3"
-Mar 22 17:20:46 donkeypi_uwe mtp-probe: bus: 1, device: 5 was not an MTP device
-Mar 22 17:20:47 donkeypi_uwe kernel: [  279.602877] scsi 0:0:0:0: Direct-Access     Kingston DataTraveler 3.0 PMAP PQ: 0 ANSI: 6
-Mar 22 17:20:47 donkeypi_uwe kernel: [  279.603908] sd 0:0:0:0: Attached scsi generic sg0 type 0
-Mar 22 17:20:48 donkeypi_uwe kernel: [  280.989507] sd 0:0:0:0: [sda] 61457664 512-byte logical blocks: (31.5 GB/29.3 GiB)
-Mar 22 17:20:48 donkeypi_uwe kernel: [  280.989729] sd 0:0:0:0: [sda] Write Protect is off
-Mar 22 17:20:48 donkeypi_uwe kernel: [  281.019596] sd 0:0:0:0: [sda] Attached SCSI removable disk
-Mar 22 17:20:50 donkeypi_uwe kernel: [  282.873096] Voltage normalised (0x00000000)
-```
 
 
 ### How big is the tub folder
-If you want to know how many MB of data you collected already use the `su` comand. More info on the `su` command [here](https://unix.stackexchange.com/questions/185764/how-do-i-get-the-size-of-a-directory-on-the-command-line)
+If you want to know how many MB of data you collected already use the `su` command. More info on the `su` command [here](https://unix.stackexchange.com/questions/185764/how-do-i-get-the-size-of-a-directory-on-the-command-line)
 ```
 (env) pi@donkeypi_uwe:~/mycar $ du -sh tub
 232M	tub
@@ -543,149 +509,7 @@ If you want to know how many MB of data you collected already use the `su` coman
 
 ## Build pre processing pipe line
 
-To add a pre proccessing pipe line we need open cv. To intsall opencv on the raspberry
+
+### Install openCV on the raspi
+To add a pre-processing pipe line we need openCV. To intsall opencv on the raspberry
 `pip install opencv-python`
-
-# Donkey Command-line Utilities
-
-This chapter is copied from the [donkey car utility doc](https://github.com/autorope/donkeycar/blob/e23f8f1d2478a4d2132cd8b09e27faa00b393ff7/docs/utility/donkey.md)
-
-The `donkey` command is created when you install the donkeycar Python package. This is a Python script that adds some important functionality. The operations here are vehicle independent, and should work on any hardware configuration.
-
-## Create Car
-
-This command creates a new dir which will contain the files needed to run and train your robot.
-
-Usage:
-```bash
-donkey createcar --path <dir> [--overwrite] [--template <donkey2>]
-```
-
-* This command may be run from any dir
-* Run on the host computer or the robot
-* It uses the `--path` as the destination dir to create. If `.py` files exist there, it will not overwrite them, unless the optional `--overwrite` is used.
-* The optional `--template` will specify the template file to start from. For a list of templates, see the `donkeycar/templates` dir
-
-## Find Car
-
-This command attempts to locate your car on the local network using nmap.
-
-Usage:
-```bash
-donkey findcar
-```
-
-* Run on the host computer
-* Prints the host computer IP address and the car IP address if found
-* Requires the nmap utility:
-```bash
-sudo apt install nmap
-```
-
-## Calibrate Car
-
-This command allows you to manually enter values to interactively set the PWM values and experiment with how your robot responds.
-See also [more information.](http://docs.donkeycar.com/guide/calibrate/#calibrate-your-car)
-
-Usage:
-```bash
-donkey calibrate --channel <0-15 channel id>
-```
-
-* Run on the host computer
-* Opens the PWM channel specified by `--channel`
-* Type integer values to specify PWM values and hit enter
-* Hit `Ctrl + C` to exit
-
-## Clean data in Tub
-
-Opens a web server to delete bad data from a tub.
-
-Usage:
-```
-donkey tubclean <folder containing tubs>
-```
-
-* Run on pi or host computer.
-* Opens the web server to delete bad data.
-* Hit `Ctrl + C` to exit
-
-
-## Make Movie from Tub
-
-This command allows you to create a movie file from the images in a Tub.
-
-Usage:
-```bash
-donkey makemovie <tub_path> [--out=<tub_movie.mp4>] [--config=<config.py>]
-```
-
-* Run on the host computer or the robot
-* Uses the image records from `--tub` dir path given
-* Creates a movie given by `--out`. Codec is inferred from file extension. Default: `tub_movie.mp4`
-* Optional argument to specify a different `config.py` other than default: `config.py`
-
-
-
-## Check Tub {#tubclean}
-
-This command allows you to see how many records are contained in any/all tubs. It will also open each record and ensure that the data is readable and intact. If not, it will allow you to remove corrupt records.
-
-Usage:
-```
-donkey tubcheck <tub_path> [--fix]
-```
-
-* Run on the host computer or the robot
-* It will print summary of record count and channels recorded for each tub
-* It will print the records that throw an exception while reading
-* The optional `--fix` will delete records that have problems
-
-
-## Histogram
-
-This command will show a pop-up window showing the histogram of record values in a given tub.
-
-
-Usage:
-```bash
-donkey tubhist <tub_path> --rec=<"user/angle">
-```
-
-* Run on the host computer
-
-* When the `--tub` is omitted, it will check all tubs in the default data dir
-
-
-## Plot Predictions
-
-This command allows you plot steering and throttle against predictions coming from a trained model.
-
-Usage:
-```bash
-donkey tubplot <tub_path> [--model=<model_path>]
-```
-
-* This command may be run from `~/mycar` dir
-* Run on the host computer
-* Will show a pop-up window showing the plot of steering values in a given tub compared to NN predictions from the trained model
-* When the `--tub` is omitted, it will check all tubs in the default data dir
-
-
-## Simulation Server
-
-This command allows you serve steering and throttle controls to a simulated vehicle using the [Donkey Simulator](/guide/simulator.md).
-
-Usage:
-```bash
-donkey sim --model=<model_path> [--type=<linear|categorical>] [--top_speed=<speed>] [--config=<config.py>]
-```
-
-* This command may be run from `~/mycar` dir
-* Run on the host computer
-* Uses the model to make predictions based on images and telemetry from the simulator
-* `--type` can specify whether the model needs angle output to be treated as categorical
-* Top speed can be modified to ascertain stability at different goal speeds
-
-
-
