--- a/051-DonkeyCar.Rmd
+++ b/051-DonkeyCar.Rmd
@@ -523,7 +523,15 @@ run
 (donkey) Uwes-MacBook-Pro:mycar uwesterr$  python ~/mycar/manage.py train --tub tub --model ./models/mypilot
 ```
 
-this leads to
+which will place a model file called `mypilot` at 
+```
+(donkey) Uwes-MacBook-Pro:models uwesterr$ pwd
+/Users/uwesterr/mycar/models
+(donkey) Uwes-MacBook-Pro:models uwesterr$ ls
+mypilot
+```
+
+the command to train the neural network leads to the following output in the terminal window
 
 ```
 (donkey) Uwes-MacBook-Pro:mycar uwesterr$  python ~/mycar/manage.py train --tub tub --model ./models/mypilot
