--- a/0511-CommandLineUtilites.Rmd
+++ b/0511-CommandLineUtilites.Rmd
@@ -70,15 +70,23 @@ This command allows you to create a movie file from the images in a Tub.
 
 Usage:
 ```bash
-donkey makemovie <tub_path> [--out=<tub_movie.mp4>] [--config=<config.py>]
+donkey makemovie <tub_path> [--out=<tub_movie.mp4>] [--config=<config.py>] [--model=<model path>] [--model_type=(linear|categorical|rnn|imu|behavior|3d)] [--start=0] [--end=-1] [--scale=2] [--salient]
 ```
 
 * Run on the host computer or the robot
 * Uses the image records from `--tub` dir path given
 * Creates a movie given by `--out`. Codec is inferred from file extension. Default: `tub_movie.mp4`
 * Optional argument to specify a different `config.py` other than default: `config.py`
+* Optional model argument will load the keras model and display prediction as lines on the movie
+* model_type may optionally give a hint about what model type we are loading. Categorical is default.
+* optional `--salient` will overlay a visualization of which pixels excited the NN the most
+* optional `--start` and/or `--end` can specify a range of frame numbers to use.
+scale will cause ouput image to be scaled by this amount
 
-
+Examples:
+```bash
+(donkeyV3) Uwes-MBP:mycarV3 uwesterr$ donkey makemovie --tub=/Users/uwesterr/mycarV3/data/tubVaihingenIIIProcessed  --out=VaihingenTubMovieV3.mp4 --config=config.py --model=/Users/uwesterr/mycarV3/vaihingenIII.h5  --type=linear --start=0 --end=10 --salient
+```
 
 ## Check Tub {#tubclean}
 
