--- a/0511-CommandLineUtilites.Rmd
+++ b/0511-CommandLineUtilites.Rmd
@@ -93,6 +93,11 @@ Results in the following movie
   <source src="images/VaihingenTubMovieV3WithSteeringAndSalientLong.mp4" type="video/mp4">
 </video>
 
+The animations within the video are:
+
+- Green lines are the steering predictions as per defined model
+- Visualization of which pixels excited the NN the most
+
 ## Check Tub {#tubclean}
 
 This command allows you to see how many records are contained in any/all tubs. It will also open each record and ensure that the data is readable and intact. If not, it will allow you to remove corrupt records.
@@ -100,6 +105,7 @@ This command allows you to see how many records are contained in any/all tubs. I
 Usage:
 ```
 donkey tubcheck <tub_path> [--fix]
+donkey tubcheck /Users/uwesterr/mycarV3/data/tubVaihingenIIIProcessed  
 ```
 
 * Run on the host computer or the robot
