added h5 reverse engineering

--- a/051-DonkeyCar.Rmd
+++ b/051-DonkeyCar.Rmd
@@ -568,7 +568,7 @@ Epoch 00002: val_loss improved from 0.37914 to 0.29204, saving model to ./models
 Run the following command on the raspberry pi.
 
 ```
-(env) pi@donkeyUweTk:~/d2 $ python manageUwe.py drive --model ~/d2/models/vaihingenIII.h5
+(env) pi@donkeypi_uwe:~/mycar $ python manage.py drive --js --model ~/mycar/models/vaihingenIII.h5
 ```
 Toggle drive mode by pressing button **'A'**, the modes are toggles between three states
 
@@ -628,4 +628,70 @@ For Tawn Kramer's version of donkeycar the following key mappings are valid for 
 - Left cross: 
     - up: increase throttle_scale
     - down decrease throttle_scale
+
+## Load h5 model and inspect
+
+
+```
+from tensorflow.python.keras.models import load_model
+
+model1 = load_model("base_linearTawnKramer.h5")
+model1.summary()
+```
+
+you get 
+
+```
+__________________________________________________________________________________________________
+Layer (type)                    Output Shape         Param #     Connected to                     
+==================================================================================================
+img_in (InputLayer)             (None, 120, 160, 3)  0                                            
+__________________________________________________________________________________________________
+cropping2d (Cropping2D)         (None, 120, 160, 3)  0           img_in[0][0]                     
+__________________________________________________________________________________________________
+batch_normalization_v1 (BatchNo (None, 120, 160, 3)  12          cropping2d[0][0]                 
+__________________________________________________________________________________________________
+conv2d_1 (Conv2D)               (None, 58, 78, 24)   1824        batch_normalization_v1[0][0]     
+__________________________________________________________________________________________________
+dropout (Dropout)               (None, 58, 78, 24)   0           conv2d_1[0][0]                   
+__________________________________________________________________________________________________
+conv2d_2 (Conv2D)               (None, 27, 37, 32)   19232       dropout[0][0]                    
+__________________________________________________________________________________________________
+dropout_1 (Dropout)             (None, 27, 37, 32)   0           conv2d_2[0][0]                   
+__________________________________________________________________________________________________
+conv2d_3 (Conv2D)               (None, 12, 17, 64)   51264       dropout_1[0][0]                  
+__________________________________________________________________________________________________
+dropout_2 (Dropout)             (None, 12, 17, 64)   0           conv2d_3[0][0]                   
+__________________________________________________________________________________________________
+conv2d_4 (Conv2D)               (None, 10, 15, 64)   36928       dropout_2[0][0]                  
+__________________________________________________________________________________________________
+dropout_3 (Dropout)             (None, 10, 15, 64)   0           conv2d_4[0][0]                   
+__________________________________________________________________________________________________
+conv2d_5 (Conv2D)               (None, 8, 13, 64)    36928       dropout_3[0][0]                  
+__________________________________________________________________________________________________
+dropout_4 (Dropout)             (None, 8, 13, 64)    0           conv2d_5[0][0]                   
+__________________________________________________________________________________________________
+flattened (Flatten)             (None, 6656)         0           dropout_4[0][0]                  
+__________________________________________________________________________________________________
+dense (Dense)                   (None, 100)          665700      flattened[0][0]                  
+__________________________________________________________________________________________________
+dropout_5 (Dropout)             (None, 100)          0           dense[0][0]                      
+__________________________________________________________________________________________________
+dense_1 (Dense)                 (None, 50)           5050        dropout_5[0][0]                  
+__________________________________________________________________________________________________
+dropout_6 (Dropout)             (None, 50)           0           dense_1[0][0]                    
+__________________________________________________________________________________________________
+n_outputs0 (Dense)              (None, 1)            51          dropout_6[0][0]                  
+__________________________________________________________________________________________________
+n_outputs1 (Dense)              (None, 1)            51          dropout_6[0][0]                  
+==================================================================================================
+Total params: 817,040
+Trainable params: 817,034
+Non-trainable params: 6
+
+```
+
+
+
+
 
