--- a/0511-CommandLineUtilites.Rmd
+++ b/0511-CommandLineUtilites.Rmd
@@ -161,6 +161,14 @@ donkey sim --model=<model_path> [--type=<linear|categorical>] [--top_speed=<spee
 
 ## Colab training
 
+on raspi bundel the data for easy retrieval
+
+```
+(env) pi@donkeypi_uwe:~/mycar/data $ tar -czf tubRp.tar.gz tub*
+
+```
+
+
 fist we need to get the data in a format to upload to our google mydrive as a tar zip 
 ```
 tar -czf tubTest.tar.gz tub*
@@ -171,5 +179,17 @@ more info on how to train in colab is given in the notebook itself
 https://colab.research.google.com/github/robocarstore/donkey-car-training-on-google-colab/blob/master/Donkey_Car_Training_using_Google_Colab.ipynb#scrollTo=0ShFSsaewLCT
 
 
+## Transfer learning
+
+Tawn Kramer wrote a little tool to do transfer learning which can be downloaded from https://gist.github.com/tawnkramer/5fa63a805e045504c4e56004e4f93e42
+
+There is a python file 
+
+```
+train_imagenet.py
+```
+
+As a starting point Tawn also offers a .h5 model ```base_linear.h5``` which can be downloaded from 
+https://drive.google.com/open?id=18Qfc_T5fpUmuTqXFZbJZrQhlf2l3S0VK 
 
 
