--- a/0511-CommandLineUtilites.Rmd
+++ b/0511-CommandLineUtilites.Rmd
@@ -183,10 +183,10 @@ https://colab.research.google.com/github/robocarstore/donkey-car-training-on-goo
 
 Tawn Kramer wrote a little tool to do transfer learning which can be downloaded from https://gist.github.com/tawnkramer/5fa63a805e045504c4e56004e4f93e42
 
-There is a python file 
+There is a python file ```train_imagenet.py``` which is engaged with the following command
 
 ```
-train_imagenet.py
+train_imagenet.py --model="mymodel.h5" --data="/data/ImageNetDir" --resume
 ```
 
 As a starting point Tawn also offers a .h5 model ```base_linear.h5``` which can be downloaded from 
