added info on how to use tubplot whith RNN

--- a/051-DonkeyCar.Rmd
+++ b/051-DonkeyCar.Rmd
@@ -562,6 +562,74 @@ Epoch 00002: val_loss improved from 0.37914 to 0.29204, saving model to ./models
 35/35 [==============================] - 31s 874ms/step - loss: 0.3338 - angle_out_loss: 0.5289 - throttle_out_loss: 0.1387 - val_loss: 0.2920 - val_angle_out_loss: 0.4629 - val_throttle_out_loss: 0.1212
 ```
 
+The model is defined in `keras.py`
+
+
+```python
+class KerasLinear(KerasPilot):
+    '''
+    The KerasLinear pilot uses one neuron to output a continous value via the 
+    Keras Dense layer with linear activation. One each for steering and throttle.
+    The output is not bounded.
+    '''
+    def __init__(self, num_outputs=2, input_shape=(120, 160, 3), roi_crop=(0, 0), *args, **kwargs):
+        super(KerasLinear, self).__init__(*args, **kwargs)
+        self.model = default_n_linear(num_outputs, input_shape, roi_crop)
+        self.compile()
+
+    def compile(self):
+        self.model.compile(optimizer=self.optimizer,
+                loss='mse')
+
+    def run(self, img_arr):
+        img_arr = img_arr.reshape((1,) + img_arr.shape)
+        outputs = self.model.predict(img_arr)
+        steering = outputs[0]
+        throttle = outputs[1]
+        return steering[0][0], throttle[0][0]
+```
+
+
+```python
+def default_n_linear(num_outputs, input_shape=(120, 160, 3), roi_crop=(0, 0)):
+
+    drop = 0.1
+
+    #we now expect that cropping done elsewhere. we will adjust our expeected image size here:
+    input_shape = adjust_input_shape(input_shape, roi_crop)
+    
+    img_in = Input(shape=input_shape, name='img_in')
+    x = img_in
+    x = Convolution2D(24, (5,5), strides=(2,2), activation='relu', name="conv2d_1")(x)
+    x = Dropout(drop)(x)
+    x = Convolution2D(32, (5,5), strides=(2,2), activation='relu', name="conv2d_2")(x)
+    x = Dropout(drop)(x)
+    x = Convolution2D(64, (5,5), strides=(2,2), activation='relu', name="conv2d_3")(x)
+    x = Dropout(drop)(x)
+    x = Convolution2D(64, (3,3), strides=(1,1), activation='relu', name="conv2d_4")(x)
+    x = Dropout(drop)(x)
+    x = Convolution2D(64, (3,3), strides=(1,1), activation='relu', name="conv2d_5")(x)
+    x = Dropout(drop)(x)
+    
+    x = Flatten(name='flattened')(x)
+    x = Dense(100, activation='relu')(x)
+    x = Dropout(drop)(x)
+    x = Dense(50, activation='relu')(x)
+    x = Dropout(drop)(x)
+
+    outputs = []
+    
+    for i in range(num_outputs):
+        outputs.append(Dense(1, activation='linear', name='n_outputs' + str(i))(x))
+        
+    model = Model(inputs=[img_in], outputs=outputs)
+    
+    return model
+
+```
+
+
+
 ### Add augmentation
 
 Adding augmentation should lead to a more robust model, to invoke augmentation set the flag `--aug` when calling `manage.py`
