--- a/0511-CommandLineUtilites.Rmd
+++ b/0511-CommandLineUtilites.Rmd
@@ -180,5 +180,10 @@ more info on how to train in colab is given in the notebook itself
 
 https://colab.research.google.com/github/robocarstore/donkey-car-training-on-google-colab/blob/master/Donkey_Car_Training_using_Google_Colab.ipynb#scrollTo=0ShFSsaewLCT
 
+### Blog: Train donkeycar with GPU support in Colab 
+
+Check out the blog https://uwesterr.github.io/MlFastAiBlog/donkeycar/colab/2020/03/02/TrainDonkeyCar.html
+The blog can be turned into a Jupyter Notebook running in Google Colab with one mouse click
+
 
 
