--- a/052-DonkeyCarSoftwareAnalysis.Rmd
+++ b/052-DonkeyCarSoftwareAnalysis.Rmd
@@ -355,6 +355,51 @@ which are the same files and folders which are located at the [official GitHub p
 
 The donkeypart_bluetooth_game_controller was installed during the set up of the raspi for the project as described in section \@ref(BluetoothControllerInstall)
 
+## Assignement of Logitech 710 controler
+
+- steering: left stick
+- throttle: right stick
+- mode:  Button **Start**
+- constant throttle: Button **Back**
+- Emergency break: Button **A**
+- Erase last 100 records: Button **Y**
+- recording: False: Button **B** 
+- wiggle left: Button **LB**  
+- wiggle right: Button **RB** 
+
+```python
+       self.axis_names = {
+            0x00: 'left_stick_horz',
+            0x01: 'left_stick_vert',
+            0x03: 'right_stick_horz',
+            0x04: 'right_stick_vert',
+
+            0x02: 'L2_pressure',
+            0x05: 'R2_pressure',
+
+            0x10: 'dpad_leftright', # 1 is right, -1 is left
+            0x11: 'dpad_up_down', # 1 is down, -1 is up
+        }
+
+        self.button_names = {
+            0x13a: 'back',  # 8 314
+            0x13b: 'start',  # 9 315
+            0x13c: 'Logitech',  # a  316
+
+            0x130: 'A',
+            0x131: 'B',
+            0x133: 'X',
+            0x134: 'Y',
+
+            0x136: 'L1',
+            0x137: 'R1',
+
+            0x13d: 'left_stick_press',
+            0x13e: 'right_stick_press',
+        }
+```
+
+
 ## Assignment of WiiU controller sticks to action {#AssignStickToAction}
 
 The mapping from button codes to button names is defined in ```donkeypart_bluetooth_game_controller/wiiu_config.yml```
